<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.sonarsource.parent</groupId>
    <artifactId>parent</artifactId>
    <version>83.0.0.2369</version>
  </parent>
  <groupId>org.sonarsource.orchestrator</groupId>
  <artifactId>orchestrator-parent</artifactId>
  <version>5.6.2-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Orchestrator :: Parent</name>
  <inceptionYear>2011</inceptionYear>

  <organization>
    <name>SonarSource</name>
    <url>http://www.sonarsource.com</url>
  </organization>

  <modules>
    <module>echo</module>
    <module>sonar-orchestrator</module>
    <module>sonar-orchestrator-junit4</module>
    <module>sonar-orchestrator-junit5</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:SonarSource/orchestrator.git</connection>
    <developerConnection>scm:git:git@github.com:SonarSource/orchestrator.git</developerConnection>
    <url>https://github.com/SonarSource/orchestrator</url>
    <tag>HEAD</tag>
  </scm>

  <issueManagement>
    <system>JIRA</system>
    <url>https://jira.sonarsource.com/browse/ORCH</url>
  </issueManagement>

  <properties>
    <license.name>GNU LGPL v3</license.name>
    <slf4j.version>2.0.17</slf4j.version>
    <sonar.exclusions>
      **/com/sonar/orchestrator/echo/**/*.java,target/generated-sources/**/*
    </sonar.exclusions>

    <!-- used for deployment to SonarSource Artifactory -->
    <gitRepositoryName>orchestrator</gitRepositoryName>
    <maven.compiler.release>17</maven.compiler.release>
    <sonarVersion>5.1</sonarVersion>
    <sonar.organization>sonarsource</sonar.organization>
    <sonar.projectKey>org.sonarsource.orchestrator:orchestrator-parent</sonar.projectKey>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.19.0</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>3.0.1</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-exec</artifactId>
        <version>1.5.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.18.0</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.27.6</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>5.20.0</version>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.13.4</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${version.jacoco.plugin}</version>
        <configuration>
          <excludes>
            <exclude>**/*.zip</exclude>
          </excludes>
          <includes>
            <include>com/sonar/orchestrator/**</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <doclint>none</doclint>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
